package com.example.stable_fragment;

import android.os.Bundle;

import androidx.fragment.app.Fragment;

import android.view.LayoutInflater;
import android.view.View;
import android.view.ViewGroup;
import android.widget.Button;
import android.widget.ListView;
import android.widget.TextView;
import android.widget.Toast;

import java.util.Objects;


/**
 * A simple {@link Fragment} subclass.
 * Use the {@link BlankFragment#newInstance} factory method to
 * create an instance of this fragment.
 */
public class BlankFragment
        extends Fragment
{
    // TODO: Rename parameter arguments, choose names that match
    // the fragment initialization parameters, e.g. ARG_ITEM_NUMBER
    private static final String ARG_PARAM1 = "param1";
    private static final String ARG_PARAM2 = "param2";

    // TODO: Rename and change types of parameters
    private String mParam1;
    private String mParam2;
    private Button changeSchoolButton;
    private TextView majorTitleView;
    private ListView majorListView;
    private View fragment;

    public BlankFragment()
    {
        // Required empty public constructor
    }

    /**
     * Use this factory method to create a new instance of
     * this fragment using the provided parameters.
     *
     * @param param1 Parameter 1.
     * @param param2 Parameter 2.
     * @return A new instance of fragment BlankFragment.
     */
    // TODO: Rename and change types and number of parameters
    public static BlankFragment newInstance(String param1, String param2)
    {
        BlankFragment fragment = new BlankFragment();
        Bundle args = new Bundle();
        args.putString(ARG_PARAM1, param1);
        args.putString(ARG_PARAM2, param2);
        fragment.setArguments(args);
        return fragment;
    }

    @Override
    public void onCreate(Bundle savedInstanceState)
    {
        super.onCreate(savedInstanceState);
        if(getArguments() != null)
        {
            mParam1 = getArguments().getString(ARG_PARAM1);
            mParam2 = getArguments().getString(ARG_PARAM2);
        }
    }

    @Override
    public View onCreateView(
            LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState
    )
    {
        // Inflate the layout for this fragment
        fragment = inflater.inflate(R.layout.fragment_blank, container, false);

        changeSchoolButton = (Button) fragment.findViewById(R.id.changeSchool);
        majorTitleView = (TextView) fragment.findViewById(R.id.majorTitle);
        majorListView = (ListView) fragment.findViewById(R.id.majorList);
        changeSchoolButton.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view)
            {
                fragment.setVisibility(View.INVISIBLE);
                majorListView.setAdapter(null);
                majorTitleView.setText("工学专业");
                TextView schoolTitleView = (TextView) Objects.requireNonNull(getActivity()).findViewById(R.id.listTitle);
                schoolTitleView.setText("请选择学校");
                schoolTitleView.setTextColor(getResources().getColor(android.R.color.holo_red_light));
                Toast.makeText(getContext(), "已返回, 请重新选择学校", Toast.LENGTH_SHORT).show();
            }
        });


        return fragment;
    }
}
