@startuml

title __STABLE_FRAGMENT's Class Diagram__\n

  namespace com.example.stable_fragment {
    class com.example.stable_fragment.BlankFragment {
    }
  }
  

  namespace com.example.stable_fragment {
    class com.example.stable_fragment.BuildConfig {
    }
  }
  

  namespace com.example.stable_fragment {
    class com.example.stable_fragment.MainActivity {
    }
  }
  

  com.example.stable_fragment.BlankFragment -up-|> androidx.fragment.app.Fragment
  com.example.stable_fragment.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
